Fix spacing issue

--- a/react-frontend/src/css/S3Browser.css
+++ b/react-frontend/src/css/S3Browser.css
@@ -164,7 +164,7 @@ div.footer div.new-filename-container {
     margin-bottom: 1em;
 }
 
-div.footer label {
+div.footer div.new-filename-container label {
     margin-right: 1em;
 }
 
